update : chatbot (views,template detail )

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ DB_HOST=mysql-4c55101-minhtrivo2005gg-b6de.c.aivencloud.com
 DB_PORT=26715
 SECRET_KEY="django-insecure-=fooya_i(jg4(xcq0-71!67%a=3q38inmnn(98o(*2uha*in5_"
 DEBUG =True 
+OPENAI_API_KEY= "sk-eamOhMG-_HeEIWJQedziyqiaTTB38BZZgwbxfTz1mHT3BlbkFJtvsRwsr8T9-_WAZdfF__VHM32I23qtBtp-M_XE3QgA"
