--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ DB_PORT=26715
 SECRET_KEY="django-insecure-=fooya_i(jg4(xcq0-71!67%a=3q38inmnn(98o(*2uha*in5_"
 DEBUG =True 
 OPENAI_API_KEY= "sk-eamOhMG-_HeEIWJQedziyqiaTTB38BZZgwbxfTz1mHT3BlbkFJtvsRwsr8T9-_WAZdfF__VHM32I23qtBtp-M_XE3QgA"
+EMAIL_HOST_USER=duyenvtt.2005@gmail.com
+EMAIL_HOST_PASSWORD=duyen2005
